adds login page

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -3,3 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities{
+  .text-indent {
+    text-indent: 30px;
+  }
+}
+* {
+	outline: none !important;
+}
