adjusts body/template layout

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -14,8 +14,8 @@
 }
 
 .nav-blue {
-  @apply text-white bg-blue-800;
+  @apply text-white bg-indigo-500;
 }
 .nav-white {
-  @apply text-blue-800 bg-white;
+  @apply text-indigo-500 bg-white;
 }
